--- a/cineval/pom.xml
+++ b/cineval/pom.xml
@@ -7,6 +7,13 @@
     <groupId>hu.uni.miskolc.iit.sweng</groupId>
     <artifactId>cineval-bundle</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>core</module>
+        <module>service</module>
+        <module>dao-json</module>
+        <module>controller</module>
+        <module>web</module>
+    </modules>
     <packaging>pom</packaging>
 
 
