--- a/cineval/controller/pom.xml
+++ b/cineval/controller/pom.xml
@@ -18,6 +18,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>hu.uni.miskolc.iit.sweng</groupId>
+            <artifactId>cineval-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
