--- a/cineval/service/pom.xml
+++ b/cineval/service/pom.xml
@@ -19,6 +19,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>hu.uni.miskolc.iit.sweng</groupId>
+            <artifactId>cineval-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
