--- a/cineval/web/pom.xml
+++ b/cineval/web/pom.xml
@@ -11,6 +11,18 @@
     <name>cineval-web Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
+
+        <dependency>
+            <groupId>hu.uni.miskolc.iit.sweng</groupId>
+            <artifactId>cineval-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>hu.uni.miskolc.iit.sweng</groupId>
+            <artifactId>cineval-dao-json</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
